my-deployments/jenkins/jenkins-Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jenkins
  namespace: default
spec:
  rules:
    - host: jenkins.local
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
